# juzimi

./: README.MD  build.gradle  nlifew.jks  update.json
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: category.xml  litepal.xml
app/src/main/assets/article/: 书籍名句  散文美剧  电影台词  连续剧台词
app/src/main/assets/country/: 俄国  印度  奥地利  希腊  意大利  日本  法国  罗马  美国
app/src/main/assets/dynasty/: 元朝  先秦  南北朝  宋朝  明朝  汉朝  清朝  隋唐五代  魏晋
app/src/main/res/layout/: activity_base.xml  activity_empty.xml  activity_main.xml  activity_search.xml  activity_share.xml  activity_space.xml  dialog_picture.xml  dialog_share_edit.xml  dialog_share_picture.xml  dialog_share_typeset.xml  fragment_article_item.xml  fragment_container.xml  fragment_content.xml  fragment_sentence_item.xml  fragment_writer_item.xml  nav_header_main.xml  widget_sentence.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/values-night/: colors.xml  styles.xml
app/src/main/res/xml/: pref_settings.xml  sentence_widget_info.xml
support/: build.gradle
support/src/main/: AndroidManifest.xml
support/src/main/res/layout/: dialog_seekbar.xml  dialog_textsize.xml
support/src/main/res/values/: attrs.xml  styles.xml
xjuzimi/: build.gradle
xjuzimi/src/main/: AndroidManifest.xml
xjuzimi/src/main/cpp/: CMakeLists.txt  auto_release.h  html.cpp  html.h  log.h  native-lib.cpp
xjuzimi/src/main/cpp/gumbo/: CMakeLists.txt
xjuzimi/src/main/res/values/: strings.xml
(+127 files in other folders)
